--- a/blog/templates/blog/specific_post.html
+++ b/blog/templates/blog/specific_post.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>My Awesome Blog</title>
+    <title>{{ post.title_blog }}</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -60,29 +60,24 @@
         <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://github.com/broooke/my-awesome-blog">GitHub</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="{% url 'showblog'%}">Blog</a>
       </li>
     </ul>
   </div>
 </nav>
 </header>
-    <h1 class="pl-5 pt-5">Recent posts</h1>
-    <br>
 
-{% for blog in blogs.all %}
     <div class="pl-3 pt-2">
-<div class="card" style="width: 32rem;">
+<div class="card" style="width: 50rem;">
 <!--  <img src="{{ blog.image_blog.url }}" class="card-img" >-->
   <div class="card-body">
-    <a href="{% url 'specific_post' blog.id%}"><h5 class="card-title">{{ blog.title_blog }}</h5></a>
-    <img src="{{ blog.image_blog.url }}" class="card-img" >
-    <p class="card-text">{{ blog.get_summary }}</p>
-    <p class="card-date">{{ blog.date_blog }}</p>
+    <h5 class="card-title">{{ post.title_blog }}</h5>
+    <img src="{{ post.image_blog.url }}" class="card-img"  >
+    <p class="card-text">{{ post.text_blog }}</p>
+    <p class="card-date">{{ post.date_blog }}</p>
   </div>
 </div>
-    <br>
     </div>
-    {% endfor %}
 
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
