--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -1,13 +1,13 @@
-
 <!doctype html>
 <html lang="en">
+{% load static %}
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>Album example · Bootstrap</title>
+    <title>My Awesome Blog</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -53,14 +53,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item ">
-        <a class="nav-link" href="#">About me</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% static 'static_file.rtf' %}">About me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">GitHub</a>
+        <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://github.com/broooke/my-awesome-blog">GitHub</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="{% url 'showblog' %}">Blog</a>
       </li>
     </ul>
   </div>
@@ -71,11 +71,12 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>Album example</h1>
+      <h1>Welcome, to My Awesome Blog</h1>
       <p class="lead text-muted">Hey there! I am excited to see you here! You can write me right now!</p>
       <p>
         <a href="mailto:bi50_n.k.gaiydenko@mpt.ru" class="btn btn-primary my-2">Mail me!</a>
       </p>
+      <img src="{% static 'gansta.jpg' %}"  height="300" width="300" class="img-fluid" >
     </div>
   </section>
 
